<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c_FFFFFF"
        tools:context=".StartActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/app_icon" />


        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/get_pos"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/poppins_regular"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingHorizontal="40dp"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="30sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/txtMsgAbove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/customize_your_experience_while_playing"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/layout1"
            app:layout_constraintStart_toStartOf="@+id/layout1"
            app:layout_constraintTop_toBottomOf="@+id/layout1" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="@+id/txtMsgAbove"
            app:layout_constraintStart_toStartOf="@+id/txtMsgAbove"
            app:layout_constraintTop_toBottomOf="@+id/txtMsgAbove">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/truth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/bg_btn"
                    android:fontFamily="@font/poppins_regular"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:paddingHorizontal="20dp"
                    android:text="@string/add_truth"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/dare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/bg_btn"
                    android:fontFamily="@font/poppins_regular"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:paddingHorizontal="20dp"
                    android:text="@string/add_dare"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>