<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/edit_start_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/ivBottle"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivBottle"
            android:layout_width="160dp"
            android:layout_height="230dp"
            app:layout_constraintBottom_toTopOf="@id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/plastic_ic" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn"
            android:fontFamily="@font/poppins_regular"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="spin"
            android:paddingHorizontal="20dp"
            android:text="@string/spin"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBottle" />

        <LinearLayout
            android:id="@+id/selectTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/select_any_one_option"
                android:textColor="@color/black"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/truthBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/poppins_regular"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/truth"
                android:textAllCaps="false"
                android:textColor="@color/c_FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dareBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/poppins_regular"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/dare"
                android:textAllCaps="false"
                android:textColor="@color/c_FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>